--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,5 +1,6 @@
 option('gstreamer',
     type : 'combo',
+    value : '1.0',
     choices : ['1.0', '0.10', 'no'],
     description : 'Enable gstreamer support')
 
@@ -15,10 +16,12 @@ option('sasl',
 
 option('opus',
     type : 'feature',
+    value : 'enabled',
     description: 'Enable Opus audio codec')
 
 option('smartcard',
     type : 'feature',
+    value : 'enabled',
     description : 'Enable smartcard support')
 
 option('alignment-checks',
@@ -33,7 +36,7 @@ option('extra-checks',
 
 option('statistics',
     type : 'boolean',
-    value: false,
+    value: true,
     description : 'Build SPICE with statistic code enabled')
 
 option('manual',
